# dotfiles

./: Cargo.toml  README.md
configs/alacritty/: alacritty.toml  dotfile.toml
configs/atuin/: dotfile.toml
configs/aws/: config  dotfile.toml
configs/git/: .gitconfig  dotfile.toml
configs/hx/: config.toml  dotfile.toml  popup.sh  yazi-picker.sh
configs/hx/themes/: everocean.toml
configs/hypr/: .luarc.json  dotfile.toml  hyprland.conf  hyprland.lua  hyprtoolkit.conf
configs/hypr/confs/: keybinds.lua  menus.toml  monitors.lua  theme.lua
configs/hypr/scripts/: keybind-palette.sh
configs/ironbar/: arch-updates.sh  cava-braille-hires.sh  cava-braille.sh  cava.sh  config.yaml  dotfile.toml  pavucontrol-toggle.sh  style.css  weather.sh
configs/macchina/: dotfile.toml  theme.toml
configs/mako/: config  dotfile.toml
configs/starship/: config.toml  dotfile.toml
configs/tmux/: .tmux.conf  dotfile.toml
configs/waybar/: arch-updates.sh  cava-braille-hires.sh  cava-braille.sh  cava.sh  config  config.jsonc  dotfile.toml  net_speed.sh  style.css
configs/wezterm/: .wezterm.lua  dotfile.toml
configs/zsh/: aliases.zsh  dotfile.toml  edit-line.zsh  edit-zshrc.zsh  fzf.zsh
src/: logger.rs  main.rs  profile.rs  util.rs
