[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dirs = "4.0.0"
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
shellexpand = "3.0.0"
structopt = "0.3.26"
toml = "0.7.2"
