[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
colored = "2.0.0"
dirs = "4.0.0"
log = "0.4.26"
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
shellexpand = "3.0.0"
structopt = "0.3.26"
toml = "0.7.2"
